0.2.0		UNRELEASED

 FEATURES

  * Add progress bar in manifest converter. (Jelmer Vernooij)

  * Support "bzr upgrade" in Mercurial working trees. (Jelmer Vernooij)

  * Support 'bzr send --format=hg' to send hg bundles. (Jelmer Vernooij)

  * Convert 'rebase_source' extra into 'rebase-of' revision property. 
    (Jelmer Vernooij)

  * Convert 'convert_revision' extra into 'converted-from' revision property.
    (Jelmer Vernooij)

  * Set 'converted-from' revision on newly converted revisions.
    (Jelmer Vernooij)

  * New revision specified 'hg:'. (Jelmer Vernooij)

  * Add extra constraints in sqlite cache. (Jelmer Vernooij)

  * New 'bzr hg-import' command similar to 'bzr svn-import' and 
    'bzr git-import'. (Jelmer Vernooij)

 BUG FIXES

  * Mark as compatible with Bazaar 2.1. (Jelmer Vernooij)

  * Check for Mercurial version before attempting to import it.
    (#432100, Jelmer Vernooij)

  * Deal with spaces in paths. (Jelmer Vernooij)

  * Remove empty directories during fetch. (Jelmer Vernooij)

  * Mark Mercurial 1.4 and 1.5 as supported. (#486899, Jelmer Vernooij)

  * Don't warn about development versions of Mercurial. (#492292, Jelmer 
    Vernooij)

  * Cope with unusual characters in changeset ids. (#498945, Jelmer Vernooij)

  * Only mention Mercurial version to use yet. (#517345, Jelmer Vernooij)

  * Only consider major version numbers in compatibility checks.
    (#517343, Jelmer Vernooij)

  * Cope with non-ascii characters in committer names, messages when 
    trying to create delta bases. (Jelmer Vernooij)

  * Fix conversion of symlinks. (#594335, Max Bowser)

  * Don't allow probing for Mercurial repositories over HTTP to break 
    bzr. (Jelmer Vernooij)

 DOCUMENTATION

  * Add some basic instructions in INSTALL. (Martin Pool)

0.1.0		2009-09-24

 Initial release.