@@ -35,7 +35,8 @@
 
   * Remove empty directories during fetch. (Jelmer Vernooij)
 
-  * Mark Mercurial 1.4 and 1.5 as supported. (#486899, Jelmer Vernooij)
+  * Mark Mercurial 1.6 as supported, drop support for earlier versions.
+    (#486899, Jelmer Vernooij)
 
   * Don't warn about development versions of Mercurial. (#492292, Jelmer 
     Vernooij)
